[gd_scene load_steps=3 format=3 uid="uid://b773kn4m3w3th"]

[ext_resource type="Script" path="res://atomic_button.gd" id="1_jfu8s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdsnx"]
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Base" type="Button"]
offset_right = 60.0
offset_bottom = 60.0
script = ExtResource("1_jfu8s")
main_color = Color(0, 0, 1, 1)
atomic_n = 26
atomic_symbol = "Fe"

[node name="Main" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gdsnx")

[node name="N" type="Label" parent="."]
layout_mode = 1
offset_right = 43.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 10
text = "10"

[node name="Symbol" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Ar"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
